manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ml-project
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: backend
